# mailmerge

./: .gitignore  README.md  example.csv  example_contacts.csv  example_email.txt  mailmerge.py  pyproject.toml
examples/: example_email.html  example_email_3.html
mailmerge_cli/: __init__.py  __main__.py  cli.py
